tests/error/protocol_errors/function_body.err
Error: Expected a copyable type (at $FILE:23:15)
   | 
21 | def main() -> str:
22 |     f = MyStruct()
23 |     return bar(f, 42)
   |                ^ Expected a copyable type, got type `MyStruct` which is not
   |                  implicitly copyable

Guppy compilation failed due to 1 previous error
